<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView"
                style="@style/how_to_play_title"
                android:layout_width="@dimen/space_0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/space_15dp"
                android:layout_marginStart="@dimen/space_15dp"
                android:layout_marginTop="@dimen/space_15dp"
                android:text="@string/what_is_goal_of_game"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView2"
                style="@style/how_to_play_text"
                android:layout_width="@dimen/space_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_5dp"
                android:text="@string/what_is_goal_of_game_answer"
                app:layout_constraintEnd_toEndOf="@+id/textView"
                app:layout_constraintStart_toStartOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/textView3"
                style="@style/how_to_play_title"
                android:layout_width="@dimen/space_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10dp"
                android:text="@string/what_is_in_game"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <TextView
                android:id="@+id/textView4"
                style="@style/how_to_play_text"
                android:layout_width="@dimen/space_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_5dp"
                android:text="@string/what_is_in_game_answer"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/textView5"
                style="@style/how_to_play_title"
                android:layout_width="@dimen/space_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10dp"
                android:text="@string/what_about_features_of_candidate"
                app:layout_constraintEnd_toEndOf="@+id/textView4"
                app:layout_constraintStart_toStartOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />


            <TextView
                android:id="@+id/textView6"
                style="@style/how_to_play_text"
                android:layout_width="@dimen/space_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_5dp"
                android:text="@string/what_about_features_of_candidate_answer"
                app:layout_constraintEnd_toEndOf="@+id/textView5"
                app:layout_constraintStart_toStartOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView7"
                style="@style/how_to_play_title"
                android:layout_width="@dimen/space_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_10dp"
                android:text="@string/what_about_investment_and_interview"
                app:layout_constraintEnd_toEndOf="@+id/textView6"
                app:layout_constraintStart_toStartOf="@+id/textView6"
                app:layout_constraintTop_toBottomOf="@+id/textView6" />


            <TextView
                android:id="@+id/textView8"
                style="@style/how_to_play_text"
                android:layout_width="@dimen/space_0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_5dp"
                android:text="@string/what_about_investment_and_interview_answer"
                app:layout_constraintEnd_toEndOf="@+id/textView7"
                app:layout_constraintStart_toStartOf="@+id/textView7"
                app:layout_constraintTop_toBottomOf="@+id/textView7" />

            <Button
                android:id="@+id/buttonPlayNow"
                style="@style/bold_grey_button_style"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/space_15dp"
                android:layout_marginTop="@dimen/space_15dp"
                android:text="@string/play_now"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="@+id/textView8"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>