<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutNewGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4">

        <TextView
            style="@style/activity_uvod_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_red_light"
            android:paddingBottom="@dimen/space_10dp"
            android:paddingStart="@dimen/space_15dp"
            android:paddingEnd="@dimen/space_0dp"
            android:paddingTop="@dimen/space_10dp"
            android:text="@string/new_" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:scaleType="center"
            app:srcCompat="@drawable/spoj" />

        <TextView
            style="@style/activity_uvod_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/color_blue_light"
            android:paddingBottom="@dimen/space_10dp"
            android:paddingEnd="@dimen/space_15dp"
            android:paddingStart="@dimen/space_0dp"
            android:paddingTop="@dimen/space_10dp"
            android:text="@string/game" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/space_25dp"
        android:layout_marginStart="@dimen/space_25dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutNewGame"
        app:layout_constraintVertical_bias="0.4">

        <Button
            android:id="@+id/buttonHowToPlay"
            style="@style/bold_grey_button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/space_30dp"
            android:layout_weight="1"
            android:text="@string/how_to_play"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSavedGame"
            style="@style/bold_grey_button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_15dp"
            android:layout_marginStart="@dimen/space_15dp"
            android:layout_weight="1"
            android:text="@string/saved_game"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSettings"
            style="@style/bold_grey_button_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/space_30dp"
            android:layout_weight="1"
            android:text="@string/settings"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </LinearLayout>


</android.support.constraint.ConstraintLayout>