<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/space_20dp"
            android:paddingEnd="@dimen/space_20dp"
            android:paddingTop="@dimen/space_10dp"
            android:paddingBottom="@dimen/space_10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                style="@style/statistics_block">

                <TextView
                    android:id="@+id/textViewCandidate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    style="@style/statistics_candidate_name"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

                <TextView
                    android:id="@+id/textViewOpponent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"
                    style="@style/statistics_candidate_name"
                    android:textColor="@color/color_red_light"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                style="@style/statistics_block">

                <TextView
                    android:id="@+id/textViewCandidateMostUsedGameAction"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/textViewMostUsedGameAction"
                    style="@style/statistics_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/statistics_most_used_game_action"  />

                <TextView
                    android:id="@+id/textViewOpponentMostUsedGameAction"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                style="@style/statistics_block">

                <TextView
                    android:id="@+id/textViewCandidateMostUsedProblem"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/textViewMostUsedProblem"
                    style="@style/statistics_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/statistics_most_used_problem" />

                <TextView
                    android:id="@+id/textViewOpponentMostUsedProblem"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                style="@style/statistics_block">

                <TextView
                    android:id="@+id/textViewCandidateMostUsedRegion"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"/>

                <TextView
                    android:id="@+id/textViewMostUsedRegion"
                    style="@style/statistics_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/statistics_most_used_region"  />

                <TextView
                    android:id="@+id/textViewOpponentMostUsedRegion"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                style="@style/statistics_block">

                <TextView
                    android:id="@+id/textViewCandidateMostVotedRegion"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/textViewMostVotedRegion"
                    style="@style/statistics_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/statistics_most_voted_region"  />

                <TextView
                    android:id="@+id/textViewOpponentMostVotedRegion"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                style="@style/statistics_block">

                <TextView
                    android:id="@+id/textViewCandidateLeastVotedRegion"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/textViewLeastVotedRegion"
                    style="@style/statistics_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/statistics_least_voted_region"  />

                <TextView
                    android:id="@+id/textViewOpponentLeastVotedRegion"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                style="@style/statistics_block">

                <TextView
                    android:id="@+id/textViewCandidateMostEffectedProblem"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/textViewMostEffectedProblem"
                    style="@style/statistics_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/statistics_most_effected_problem"  />

                <TextView
                    android:id="@+id/textViewOpponentMostEffectedProblem"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                style="@style/statistics_block">

                <TextView
                    android:id="@+id/textViewCandidateLeastEffectedProblem"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/textViewLeastEffectedProblem"
                    style="@style/statistics_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/statistics_least_effected_problem" />

                <TextView
                    android:id="@+id/textViewOpponentLeastEffectedProblem"
                    style="@style/statistics_value"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="end"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>